[gd_scene load_steps=10 format=3 uid="uid://di6fiw303vk2t"]

[ext_resource type="Script" path="res://Script/bullet_fromcrowd_poisonsmoke.gd" id="1_iltu7"]
[ext_resource type="Texture2D" uid="uid://dg73l8fgpdajl" path="res://Assets/Ghostcloud.png" id="2_kilay"]

[sub_resource type="Curve" id="Curve_oy50o"]
_data = [Vector2(0, 0.78022), 0.0, 0.0, 0, 0, Vector2(1, 0), -1.53689, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_8mk15"]
offsets = PackedFloat32Array(0, 0.193333, 0.473333, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0.705882, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_dqh6x"]
offsets = PackedFloat32Array(0, 0.52, 1)
colors = PackedColorArray(0.639216, 1, 0.388235, 1, 0.117647, 0.913725, 0.337255, 1, 0.0431373, 0.611765, 0.403922, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_146p2"]
radius = 12.0

[sub_resource type="Animation" id="Animation_6nulh"]
resource_name = "flicker"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("box:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stopemitting"
}]
}

[sub_resource type="Animation" id="Animation_8uuvy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("box:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_evgjb"]
_data = {
"RESET": SubResource("Animation_8uuvy"),
"flicker": SubResource("Animation_6nulh")
}

[node name="bullet_fromcrowd_poison" type="RigidBody2D"]
z_index = 2
gravity_scale = 0.0
script = ExtResource("1_iltu7")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
z_index = -1
texture_filter = 1
amount = 5
texture = ExtResource("2_kilay")
emission_shape = 1
emission_sphere_radius = 10.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 2.0
initial_velocity_max = 6.0
angle_max = 360.0
scale_amount_max = 1.8
scale_amount_curve = SubResource("Curve_oy50o")
color_ramp = SubResource("Gradient_8mk15")
color_initial_ramp = SubResource("Gradient_dqh6x")

[node name="QueueTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="HITbox_BULLET" type="Area2D" parent="."]

[node name="box" type="CollisionShape2D" parent="HITbox_BULLET"]
shape = SubResource("CircleShape2D_146p2")
disabled = true

[node name="Anim" type="AnimationPlayer" parent="HITbox_BULLET"]
libraries = {
"": SubResource("AnimationLibrary_evgjb")
}

[connection signal="timeout" from="QueueTimer" to="." method="_on_queue_timer_timeout"]
[connection signal="area_entered" from="HITbox_BULLET" to="." method="_on_hi_tbox_bullet_area_entered"]
